<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.nv</groupId>
	<artifactId>httpproxy</artifactId>
	<packaging>war</packaging>
	<name>HttpProxy</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>17</jdk.version>
		<log4j2.version>2.19.0</log4j2.version>
		<tomcat.version>9.0.56</tomcat.version>
	</properties>

	<build>
		<finalName>ROOT</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
					<configuration>
						<encoding>utf-8</encoding>
						<source>${jdk.version}</source>
						<target>${jdk.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
					<configuration>
						<forkMode>always</forkMode>
				         <argLine>
				           --add-opens java.base/java.lang=ALL-UNNAMED
				           --add-opens java.base/sun.net.util=ALL-UNNAMED
				         </argLine> 
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
	</build>

	<dependencies>

		<!-- Maven Servlet build library For Tomcat 9.0 -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>4.0.1</version>
			<scope>provided</scope>
		</dependency>
		
		<!-- websocket For Tomcat 9.0 -->
		<dependency>
			<groupId>javax.websocket</groupId>
			<artifactId>javax.websocket-api</artifactId>
			<version>1.1</version>
			<scope>provided</scope>
		</dependency>

		<!-- ip to location -->
		<dependency>
			<groupId>com.neutec</groupId>
			<artifactId>ip2locationNew</artifactId>
			<version>1.0.0</version>
		</dependency>
		<!-- log4j -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${log4j2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j2.version}</version>
		</dependency>

		<!-- tomcat -->
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-catalina</artifactId>
			<version>${tomcat.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-jasper</artifactId>
			<version>${tomcat.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- tomcat jdbc pool -->
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-jdbc</artifactId>
			<version>${tomcat.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- apache commons -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.4</version>
		</dependency>

		<dependency>
			<groupId>com.nv</groupId>
			<artifactId>expandUtil</artifactId>
			<version>3.2</version>
		</dependency>

		<!-- javax.xml.bind -->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>

		<dependency>
			<groupId>com.neutec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.10</version>
		</dependency>

		<!-- okhttp3 -->
		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			<version>4.10.0</version>
		</dependency>
		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>logging-interceptor</artifactId>
			<version>4.10.0</version>
		</dependency>
		
		<!-- redisson -->
		<dependency>
			<groupId>org.redisson</groupId>
			<artifactId>redisson</artifactId>
			<version>3.17.7</version>
		</dependency>
		
		<!-- test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
	    <profile>
			<id>test</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-war-plugin</artifactId>
						<version>3.1.0</version>
						<configuration>
							<warSourceExcludes>
								META-INF/context.xml,WEB-INF/web.xml
							</warSourceExcludes>
							<archive>
								<addMavenDescriptor>false</addMavenDescriptor>
							</archive>
							<warName>ROOT</warName>
						</configuration>
						<executions>
							<execution>
								<id>default-war</id>
								<configuration>
									<webResources>
										<resource>
											<directory>src/main/config/test</directory>
											<targetPath>WEB-INF/classes</targetPath>
											<includes>
												<include>elk_encrypt.property</include>
											</includes>
										</resource>
										<resource>
											<directory>src/main/config/test</directory>
											<targetPath>WEB-INF</targetPath>
											<includes>
												<include>web.xml</include>
											</includes>
										</resource>
									</webResources>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
					    <groupId>org.apache.maven.plugins</groupId>
					    <artifactId>maven-surefire-plugin</artifactId>
					    <version>2.22.2</version>
					    <configuration>
					        <argLine>
					           --add-opens java.base/java.lang=ALL-UNNAMED
					           --add-opens java.base/sun.net.util=ALL-UNNAMED
					        </argLine> 
					    </configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		
		<profile>
			<id>workspace</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-war-plugin</artifactId>
						<version>3.1.0</version>
						<configuration>
							<warSourceExcludes>
								META-INF/context.xml
							</warSourceExcludes>
							<archive>
								<addMavenDescriptor>false</addMavenDescriptor>
							</archive>
							<warName>HttpProxy</warName>
						</configuration>
						<executions>
							<execution>
								<id>default-war</id>
							</execution>
						</executions>
					</plugin>
				</plugins>
				<resources>
					<resource>
						<directory>src/main/config/dev</directory>
						<includes>
							<include>redis_encrypt.property</include>
							<include>redisSentinel_encrypt.property</include>
						</includes>
					</resource>
				</resources>
				<testResources>
					<testResource>
						<directory>src/main/config/test</directory>
						<includes>
							<include>context.xml</include>
						</includes>
					</testResource>
					<testResource>
						<directory>src/test/resources</directory>
					</testResource>
				</testResources>
			</build>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>
		
		<profile>
			<id>dev</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-war-plugin</artifactId>
						<version>3.1.0</version>
						<configuration>
							<warSourceExcludes>
								META-INF/context.xml
							</warSourceExcludes>
							<archive>
								<addMavenDescriptor>false</addMavenDescriptor>
							</archive>
							<warName>HttpProxy</warName>
						</configuration>
						<executions>
							<execution>
								<id>default-war</id>
							</execution>
						</executions>
					</plugin>
				</plugins>
				<resources>
					<resource>
						<directory>src/main/config/dev</directory>
						<includes>
							<include>redis_encrypt.property</include>
							<include>redisSentinel_encrypt.property</include>
						</includes>
					</resource>
				</resources>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>private-repo</id>
			<name>Private Repository</name>
			<url>http://pggitlab.neutec.com.tw/repo/maven_repo/raw/master/</url>
		</repository>
		<repository>
			<id>in-project</id>
			<name>In Project Repo</name>
			<url>file://${project.basedir}/lib</url>
		</repository>
		<repository>
			<id>apache-snapshot</id>
			<name>Apache Snapshot Repository</name>
			<url>https://repository.apache.org/content/groups/snapshots/</url>
		</repository>
	</repositories>
	<version>1.0</version>
</project>
